# bevy_2d_line

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: publish.yml
assets/shaders/: line.wgsl
examples/: curved_line.rs  many_moving_lines.rs  simple_line.rs
src/: lib.rs
